--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,6 +10,7 @@
     --cor1: #58A697;
     --cor2: #027373;
     --cor3: #025159;
+    --cor-fundo: #e6e6e6;
     --fonte-padrao: 'Noto Sans', Arial, Helvetica, sans-serif;
     --fonte-android: 'IDroid', Verdana, sans-serif;
 }
@@ -20,7 +21,7 @@
 }
 
 body {
-    background-color: var(--cor0);
+    background-color: var(--cor-fundo);
     font-family: var(--fonte-padrao);
 }
 
@@ -65,11 +66,10 @@ body {
 
 main {
     max-width: 800px;
-    margin: 0px auto 40px auto;
+    margin: 0px auto 0px auto;
     background-color: white;
-    padding: 30px;
+    padding: 40px;
     box-shadow: 0px 0px 10px #00000061;
-    border-radius: 0px 0px 10px 10px;
 }
 
 main article > h1 {
@@ -121,14 +121,13 @@ main img {
 
 div.video {
     margin: 30px 0px;
-    background-color: var(--cor3);
-    padding: 20px;
-    border-radius: 10px;
+    padding: 0px;
 }
 
 div.video > iframe {
     aspect-ratio: 16/9;
     width: 100%;
+    background-color: var(--cor0);
     border-radius: 10px;
 }
 
@@ -167,15 +166,15 @@ abbr {
 }
 
 footer {
-    padding: 10px 30px;
-    background-color: var(--cor3);
+    padding: 15px 30px;
+    background-image: linear-gradient(180deg, var(--cor2), var(--cor3));
     color: white;
     text-align: center;
     box-shadow: 0px 0px 10px #00000061;
 }
 
 footer > p {
-    font-size: 1em;
+    font-size: 1.1em;
 }
 
 footer > p > strong {
