--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,8 +26,10 @@ body {
 }
 
 #cabecalho-pagina {
+    margin: auto;
+    max-width: 820px;
     min-height: 150px;
-    background-image: linear-gradient(180deg, var(--cor1), var(--cor3));
+    background-color: var(--cor2);
     padding: 20px 30px 10px 30px;
     color: white;
     box-shadow: 0px 2px 10px #00000061;
@@ -38,7 +40,6 @@ body {
     color: white;
     text-align: center;
     font-size: 2.5em;
-    text-shadow: 2px 2px 1px #00000061;
 }
 
 #cabecalho-pagina > p {
@@ -46,7 +47,6 @@ body {
     color: white;
     font-size: 1.3em;
     text-align: center;
-    text-shadow: 1px 1px 1px #00000061;
     max-width: 500px;
 }
 
@@ -64,7 +64,7 @@ body {
 }
 
 #menu-principal > a:hover {
-    background-color: var(--cor2);
+    background-color: var(--cor3);
     color: white;
     border-radius: 10px 10px 0px 0px;
 }
@@ -86,7 +86,6 @@ main article > h2 {
     margin: 40px 0px 20px 0px;
     padding: 0 0 0 10px;
     font-size: 1.6em;
-    background-image: linear-gradient(45deg, var(--cor0), transparent);
     border-radius: 10px 0 0 10px;
 }
 
@@ -126,13 +125,21 @@ main img {
 
 div.video {
     margin: 30px 0px;
-    padding: 0px;
+    position: relative;
+    padding-top: 56.25%;
+    background-color: var(--cor2);
+    border-radius: 10px;
 }
 
 div.video > iframe {
-    aspect-ratio: 16/9;
-    width: 100%;
-    background-color: var(--cor0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    width: 96%;
+    height: 96%;
     border-radius: 10px;
 }
 
@@ -140,14 +147,14 @@ aside {
     margin: 50px 0px 20px 0px;
     background-color: var(--cor0);
     border-radius: 10px;
-    padding: 20px;
+    padding: 30px;
     box-shadow: 3px 4px 8px #00000061;
 }
 
 aside > header {
-    margin: -20px -20px 20px -20px;
-    padding: 10px 20px 10px 20px;
-    background-color: var(--cor3);
+    margin: -30px -30px 30px -30px;
+    padding: 10px 30px;
+    background-color: var(--cor2);
     color: white;
     border-radius: 10px 10px 0px 0px;
 }
@@ -171,15 +178,17 @@ abbr {
 }
 
 footer {
-    padding: 15px 30px;
-    background-image: linear-gradient(180deg, var(--cor2), var(--cor3));
+    margin: auto;
+    max-width: 820px;
+    padding: 20px 30px;
+    background-color: var(--cor2);
     color: white;
     text-align: center;
     box-shadow: 0px 0px 10px #00000061;
 }
 
 footer > p {
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 footer > p > strong {
