--- a/estilos/style.css
+++ b/estilos/style.css
@@ -180,7 +180,7 @@ abbr {
 footer {
     margin: auto;
     max-width: 820px;
-    padding: 20px 30px;
+    padding: 15px 30px;
     background-color: var(--cor2);
     color: white;
     text-align: center;
@@ -188,9 +188,15 @@ footer {
 }
 
 footer > p {
-    font-size: 1em;
+    font-size: 1.2em;
 }
 
-footer > p > strong {
+footer a {
     color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
